--- a/src/components/collections/Collections.css
+++ b/src/components/collections/Collections.css
@@ -399,14 +399,17 @@ html, body {
   padding: 0;
   line-height: 0;
   margin-top: 1rem;
+  transition: all 0.3s ease;
 }
 
+
 .collection-page .section-2 .hero-explore-button:hover .button-background {
-  fill: #bc224c;
+  fill: rgba(255, 255, 255, 0.75);
+  stroke: rgba(255, 255, 255, 0.8);
 }
 
 .collection-page .section-2 .hero-explore-button:hover .button-text {
-  fill: #ffffff;
+  fill: black;
 }
 
 .shop-now-button {
