--- a/src/components/viewAllProduct/ViewAllProduct.css
+++ b/src/components/viewAllProduct/ViewAllProduct.css
@@ -244,12 +244,14 @@
   cursor: pointer;
   padding: 0;
   line-height: 0;
+  transition: all 0.3s ease;
 }
 
 .view-product-button:hover .button-background {
-  fill: #bc224c;
+  fill: rgba(0, 0, 0, 0.75);
+  stroke: rgba(0, 0, 0, 0.8);
 }
 
 .view-product-button:hover .button-text {
-  fill: #ffffff;
+  fill: white;
 }
